--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 
 #spring.datasource.name=comlnl
 #spring.datasource.url=jdbc:mysql://localhost:3306/springboot
-spring.datasource.url=jdbc:mysql://localhost:3306/springbootnew
-spring.datasource.username=root
-spring.datasource.password=Pavan@123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/springbootnew
+#spring.datasource.username=root
+#spring.datasource.password=Pavan@123
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 
